--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,5 @@ plotly==5.24.1
 seaborn==0.13.2
 statsmodels==0.14.4
 streamlit==1.40.2
+snowflake-snowpark-python>=0.9.0
+snowflake-connector-python>=2.8.0
